...
const PhoneView = (props) => {
    const store = useSelector(state => state)

    const phone = store.selected;

    return (
        <ScrollView style={{ flex: 1 }} testID="detail-page">
            <Header title='Details' showBackButton={true} backAction={() => props.navigation.pop()} />
            <View style={styles.imageContainer}>
                <Text style={styles.name}>{phone.name}</Text>
                <Image source={{ uri: `${SERVER_URL}/images/${phone.imageFileName}` }}
                    resizeMode="contain" style={styles.image}>
                </Image>
...
